--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.59.0",
+    "@tanstack/react-virtual": "^3.10.8",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
