--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "framer-motion": "^11.11.1",
     "lucide": "^0.447.0",
     "lucide-react": "^0.447.0",
+    "mongodb": "^6.9.0",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
